# get-started

./: .main.cpp.swp  CMakeLists.txt  NOINSTALL_FIRST_STEPS.md  README.md  main.cpp
.github/: ci.yaml
.github/workflows/: bazel-build.yml  ci.yaml
.tipi/: deps  env  id
environments/: linux.cmake
environments/compiler/: clang.cmake
environments/flags/: cxx17.cmake
environments/linux.pkr.js/: linux.Dockerfile  linux.Dockerfiledisabled  linux.pkr.js
environments/linux.pkr.js/common/: Dockerfile.apt-install-required  Dockerfile.apt-install-required-before-2204  Dockerfile.apt-install-required-by-customer  Dockerfile.install-tipi  Dockerfile.remote-build-ssh-access  Dockerfile.tipi-non-root-user  Dockerfile.update-su
test/: main.cpp
